--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -35,6 +35,10 @@ dependencyManagement {
     }
 }
 
+repositories {
+    mavenLocal()
+}
+
 dependencies {
 
     /**
@@ -50,7 +54,7 @@ dependencies {
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
 
-    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:11a9b3c'
+    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:event-models'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
