--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
 
-    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:d707afe'
+    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:0f92a47-SNAPSHOT'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
