CCMSPUI-840 | Updated FeeSchemePlatformRestClient to use new /fee-details/{feeCode} endpoint in favour of /category-of-law/{feeCode} endpoint
Signed-off-by: Jamie Briggs <jamie.briggs@justice.gov.uk>

--- a/reference-fee-scheme-platform-api/build.gradle
+++ b/reference-fee-scheme-platform-api/build.gradle
@@ -28,7 +28,7 @@ checkstyleMain.exclude "*"
 
 openApiGenerate {
     generatorName = "spring"
-    inputSpec = "$rootDir/reference-fee-scheme-platform-api/open-api-specification.json".toString()
+    inputSpec = "$rootDir/reference-fee-scheme-platform-api/open-api-specification.yml".toString()
     outputDir = "$rootDir/reference-fee-scheme-platform-api/generated".toString()
     apiPackage = "uk.gov.justice.laa.fee.scheme.api"
     invokerPackage = "uk.gov.justice.laa.fee.scheme.invoker"
