configure service account name

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -25,6 +25,8 @@ ingress:
     hostname:
       enabled: false
 
+serviceAccountName: claims-event-service-prod-irsa-serviceaccount
+
 probe:
   enabled: true
 
