--- a/helm-chart/templates/application-deployment-library.yaml
+++ b/helm-chart/templates/application-deployment-library.yaml
@@ -17,7 +17,7 @@ spec:
         app: {{ .Release.Name }}-{{ .Chart.Name }}-pod
         app.kubernetes.io/name: {{ .Release.Name }}-{{ .Chart.Name }}
     spec:
-      serviceAccountName: claims-event-service-uat-irsa-serviceaccount
+      serviceAccountName: {{ .Values.serviceAccountName }}
       {{- if .Values.securityContext }}
       securityContext:
         fsGroup: {{ .Values.securityContext.fsGroup }}
