CCMSPUI-840 | Renamed queue name to "claims-api-queue" to copy claims API, and have added call to Provider Details API per claim to ensure that category of laws returned are effective to the case start date tied to a claim.
Signed-off-by: Jamie Briggs <jamie.briggs@justice.gov.uk>

--- a/data-claims-event-service/src/main/resources/application-wiremock.yml
+++ b/data-claims-event-service/src/main/resources/application-wiremock.yml
@@ -12,7 +12,7 @@ laa:
     url: ${laa.claims-api.hostname}
     accessToken: 123
   bulk-claim-queue:
-    name: bulk-claims-queue
+    name: claims-api-queue
 
 spring:
   cloud:
