--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -52,12 +52,14 @@ dependencies {
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
 
-    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:d0ea514'
+    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:f6c84eb-SNAPSHOT'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    implementation 'org.springframework.data:spring-data-commons'
 
     // Import spring-cloud-aws BOM (Bill Of Materials) for dependency management
     implementation platform('io.awspring.cloud:spring-cloud-aws:3.4.0')
