--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,26 +8,25 @@ services:
       - SERVICES=sqs
       - DEBUG=1
       - AWS_DEFAULT_REGION=us-east-1
-
     volumes:
       - "./docker-scripts/init-localstack.sh:/etc/localstack/init/ready.d/init-localstack.sh"
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
-  data-claim-api-wiremock:
-    image: wiremock/wiremock:latest
-    container_name: data-claim-api-wiremock
-    entrypoint:
-      [
-        "/docker-entrypoint.sh",
-        "--global-response-templating",
-        "--disable-gzip",
-        "--verbose",
-      ]
-    volumes:
-      - ./wiremock/mappings/data-claims-api:/home/wiremock/mappings
-    restart: always
-    ports:
-      - "8190:8080"
+  #data-claim-api-wiremock:
+  #  image: wiremock/wiremock:latest
+  #  container_name: data-claim-api-wiremock
+  #  entrypoint:
+  #    [
+  #      "/docker-entrypoint.sh",
+  #      "--global-response-templating",
+  #      "--disable-gzip",
+  #      "--verbose",
+  #    ]
+  #  volumes:
+  #    - ./wiremock/mappings/data-claims-api:/home/wiremock/mappings
+  #  restart: always
+  #  ports:
+  #    - "8190:8080"
   fee-scheme-platform-api-wiremock:
     image: wiremock/wiremock:latest
     container_name: fee-scheme-platform-api-wiremock
@@ -39,7 +38,7 @@ services:
         "--verbose",
       ]
     volumes:
-      - ./wiremock/mappings/data-claims-api:/home/wiremock/mappings
+      - ./wiremock/mappings/fee-scheme-platform-api:/home/wiremock/mappings
     restart: always
     ports:
       - "8191:8080"
