--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -40,16 +40,16 @@ management:
 
 laa:
   provider-details-api:
-    hostname: ${PROVIDER_DETAILS_API_HOSTNAME}
-    url: ${laa.provider-details-api.hostname}
+    host: ${PROVIDER_DETAILS_API_HOSTNAME}
+    url: ${laa.provider-details-api.host}
     accessToken: ${PROVIDER_DETAILS_API_ACCESS_TOKEN}
   claims-api:
-    hostname: ${CLAIMS_API_HOSTNAME}
-    url: ${laa.claims-api.hostname}
+    host: ${CLAIMS_API_HOSTNAME}
+    url: ${laa.claims-api.host}
     accessToken: ${CLAIMS_API_ACCESS_TOKEN}
   fee-scheme-platform-api:
-    hostname: ${FEE_SCHEME_PLATFORM_API_URL}
-    url: ${laa.claims-api.hostname}
+    host: ${FEE_SCHEME_PLATFORM_API_URL}
+    url: ${laa.fee-scheme-platform-api.host}
     accessToken: ${FEE_SCHEME_PLATFORM_API_ACCESS_TOKEN}
   bulk-claim-queue:
     name: ${BULK_CLAIM_QUEUE_NAME}
