--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
 
-    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:d9dbf07'
+    implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:6bd87f7-SNAPSHOT'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
