--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'uk.gov.justice.laa.datastewardship.payments:data-claims-api-models:b35f485'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
