BC-163 | Fix to release name in uat
Signed-off-by: Jamie Briggs <jamie.briggs@justice.gov.uk>

--- a/helm-chart/values/env-uat.yaml
+++ b/helm-chart/values/env-uat.yaml
@@ -1,4 +1,5 @@
 replicas: 1
-mainReleaseName: uat
+metrics:
+  mainReleaseName: uat
 
 serviceAccountName: claims-event-service-uat-irsa-serviceaccount
