Fix: Grafana observability for all envs

--- a/helm-chart/templates/grafana-dashboard.yaml
+++ b/helm-chart/templates/grafana-dashboard.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.metrics.mainReleaseName .Release.Name }}
+{{- if and .Values.grafana.enabled (or (and (contains "uat" .Release.Namespace) (eq .Release.Name "main")) (and (contains "staging" .Release.Namespace)) (and (contains "prod" .Release.Namespace))) }}
 
 apiVersion: v1
 kind: ConfigMap
