--- a/helm-chart/values/env-staging.yaml
+++ b/helm-chart/values/env-staging.yaml
@@ -3,3 +3,6 @@ metrics:
   mainReleaseName: staging
 
 serviceAccountName: claims-event-service-staging-irsa-serviceaccount
+
+grafana:
+  enabled: true
