Task: Increase UAT resource limits
Error: `java.lang.OutOfMemoryError: Cannot reserve 32768 bytes of direct buffer memory (allocated: 10457634, limit: 10485760)`

Increase the resource based on typical spring boot applications
I believe this can handle typical UAT testing loads while providing room for memory-intensive operations when bulk processinng

--- a/helm-chart/values/env-uat.yaml
+++ b/helm-chart/values/env-uat.yaml
@@ -4,5 +4,18 @@ metrics:
 
 serviceAccountName: claims-event-service-uat-irsa-serviceaccount
 
+resources:
+  limits:
+    memory: "2Gi" # 2GB (INCREASE from ~1GB)
+    cpu: "1000m"  # 1 core (same as previous)
+  requests:
+    memory: "1Gi" # 1GB (SIGNIFICANT INCREASE from 100Mi)
+    cpu: "500m"   # 0.5 CPU cores (SIGNIFICANT INCREASE from 0.01)
+
+# JVM arguments to fix OutOfMemoryError: Cannot reserve direct buffer memory
+extraEnvVars:
+  - name: JAVA_OPTS
+    value: "-XX:MaxDirectMemorySize=128m -Xmx1536m"
+
 grafana:
   enabled: true
