DSTEW-674 Address review comments

--- a/data-claims-event-service/src/test/resources/application.yml
+++ b/data-claims-event-service/src/test/resources/application.yml
@@ -11,3 +11,7 @@ spring:
         secret-key: dummy-secret-key
       region:
         static: us-east-1
+
+submission:
+  validation:
+    minimum-period: JAN-2018
