DSTEW-674 add SUBMISSION_VALIDATION_MINIMUM_PERIOD to application.yml

--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -53,3 +53,7 @@ laa:
     accessToken: ${FEE_SCHEME_PLATFORM_API_ACCESS_TOKEN}
   bulk-claim-queue:
     name: ${BULK_CLAIM_QUEUE_NAME}
+
+submission:
+  validation:
+    minimum-period: ${SUBMISSION_VALIDATION_MINIMUM_PERIOD}
