DSTEW-674 set default to APR-2025 which is overridable for test environments through environment variable SUBMISSION_VALIDATION_MINIMUM_PERIOD

--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -56,4 +56,4 @@ laa:
 
 submission:
   validation:
-    minimum-period: ${SUBMISSION_VALIDATION_MINIMUM_PERIOD}
+    minimum-period: ${SUBMISSION_VALIDATION_MINIMUM_PERIOD:APR-2025}
