--- a/helm-chart/values/env-uat.yaml
+++ b/helm-chart/values/env-uat.yaml
@@ -6,3 +6,18 @@ serviceAccountName: claims-event-service-uat-irsa-serviceaccount
 
 grafana:
   enabled: true
+
+autoscaling:
+  enabled: true
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 70
+  targetMemoryUtilizationPercentage: 80
+
+resources:
+  limits:
+    cpu: 1000m
+    memory: 1G
+  requests:
+    cpu: 25m
+    memory: 1G
