--- a/helm-chart/templates/hpa.yaml
+++ b/helm-chart/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "data-claims-api.fullname" . }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
   labels:
-    {{- include "data-claims-api.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ .Release.Name }}-{{ .Chart.Name }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "data-claims-api.fullname" . }}
+    name: {{ .Release.Name }}-{{ .Chart.Name }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
