--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -78,6 +78,11 @@ env:
       secretKeyRef:
         name: laa-data-claims-event-service-secrets
         key: BULK_CLAIM_QUEUE_NAME
+  - name: SUBMISSION_VALIDATION_MINIMUM_PERIOD
+    valueFrom:
+      secretKeyRef:
+        name: laa-data-claims-event-service-secrets
+        key: SUBMISSION_VALIDATION_MINIMUM_PERIOD
 
 grafana:
   enabled: true
