DSTEW-bug Attempt a fix for OutOfMemory errors found within the pod logs

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -83,6 +83,8 @@ env:
       secretKeyRef:
         name: laa-data-claims-event-service-secrets
         key: SUBMISSION_VALIDATION_MINIMUM_PERIOD
+  - name: JAVA_TOOL_OPTIONS
+    value: "${JAVA_TOOL_OPTIONS} -XX:MaxDirectMemorySize=256m"
 
 grafana:
   enabled: true
