--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -109,6 +109,20 @@ spotless {
     }
 }
 
+tasks.register("checkstyleStaged", Checkstyle) {
+    group = "verification"
+    description = "Runs Checkstyle on staged files only"
+
+    def filesToCheck = project.findProperty("checkstyleFiles")
+    if (filesToCheck != null) {
+        source = files(filesToCheck.split(","))
+    } else {
+        source = sourceSets.main.allJava
+    }
+
+    classpath = sourceSets.main.compileClasspath
+}
+
 testlogger {
     theme 'mocha'
 }
