--- a/reference-fee-scheme-platform-api/open-api-specification.yml
+++ b/reference-fee-scheme-platform-api/open-api-specification.yml
@@ -99,7 +99,7 @@ components:
         startDate:
           type: string
           format: date
-          description: "Civil: case start date."
+          description: "Legal Help: case start date."
         policeStationId:
           type: string
           description: "Police Station ID."
