DSTEW-879 Added retry logic and service layer for ProviderDetailsClient

--- a/data-claims-event-service/src/test/resources/application.yml
+++ b/data-claims-event-service/src/test/resources/application.yml
@@ -15,3 +15,9 @@ spring:
 submission:
   validation:
     minimum-period: JAN-2018
+
+resilience4j.retry:
+  instances:
+    pdaRetry:
+      maxAttempts: 3
+      waitDuration: 500ms
