DSTEW-879 Retry implemented and tested via integration and unit tests

--- a/data-claims-event-service/src/integrationTest/resources/application-test.yml
+++ b/data-claims-event-service/src/integrationTest/resources/application-test.yml
@@ -6,3 +6,11 @@ spring:
     aws:
       region:
         static: us-east-1
+
+resilience4j.retry:
+  instances:
+    pdaRetry:
+      maxAttempts: 3
+      waitDuration: 500ms
+      retry-exceptions:
+        - java.lang.RuntimeException
