DSTEW-874 code chnage after review

--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
   cloud:
     aws:
       sqs:
+        queue-not-found-strategy: fail
       region:
         static: ${AWS_REGION}
 
@@ -52,8 +53,8 @@ laa:
     accessToken: ${FEE_SCHEME_PLATFORM_API_ACCESS_TOKEN}
   bulk-claim-queue:
     name: ${BULK_CLAIM_QUEUE_NAME}
-    visibility-timeout-seconds: 600
-    visibility-extension-interval-seconds: 10
+    visibility-timeout-seconds: ${VISIBILITY_TIMEOUT_SECONDS}
+    visibility-extension-interval-seconds: ${VISIBILITY_EXTENSIONS_INTERVAL_SECONDS}
 
 
 submission:
