DTSEW-874 make visibility static in application.yml

--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -53,8 +53,8 @@ laa:
     accessToken: ${FEE_SCHEME_PLATFORM_API_ACCESS_TOKEN}
   bulk-claim-queue:
     name: ${BULK_CLAIM_QUEUE_NAME}
-    visibility-timeout-seconds: ${VISIBILITY_TIMEOUT_SECONDS}
-    visibility-extension-interval-seconds: ${VISIBILITY_EXTENSIONS_INTERVAL_SECONDS}
+    visibility-timeout-seconds: 600
+    visibility-extension-interval-seconds: 10
 
 
 submission:
