Spotless and build image

--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -11,8 +11,7 @@ on:
   push:
     branches-ignore:
       - main
-      - 'feature-dev/*'
-      - 'feature-test/*'
+      - 'feature/*'
 
 jobs:
   build:
