--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -90,7 +90,11 @@ env:
         key: APPLICATION_LOGGING_LEVEL
   - name: JAVA_TOOL_OPTIONS
     value: "-XX:MaxDirectMemorySize=128m"
-
+  - name: SENTRY_DSN
+    valueFrom:
+      secretKeyRef:
+        name: laa-data-claims-event-service-secrets
+        key: SENTRY_DSN
 grafana:
   enabled: true
 
@@ -108,3 +112,8 @@ resources:
   requests:
     cpu: 25m
     memory: 1G
+
+sentry:
+  enabled: true
+  environment: production
+  tracesSampleRate: 0.2
