--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
 logging:
   level:
     uk.gov.justice.laa.dstew.payments.claimsevent: ${APPLICATION_LOGGING_LEVEL:INFO}
+    io.sentry: DEBUG
 
 # used by actuator info endpoint
 info:
@@ -41,6 +42,19 @@ management:
   endpoint:
     health:
       show-details: always
+
+sentry:
+  enabled: ${SENTRY_ENABLED:false}
+  dsn: ${SENTRY_DSN:}
+  environment: ${SENTRY_ENVIRONMENT:local}
+  traces-sample-rate: ${SENTRY_TRACES_SAMPLE_RATE:1}
+  send-default-pii: false
+  logging:
+    minimum-event-level: error
+    minimum-breadcrumb-level: info
+  debug: true
+
+
 
 laa:
   provider-details-api:
