--- a/helm-chart/values/env-staging.yaml
+++ b/helm-chart/values/env-staging.yaml
@@ -21,3 +21,8 @@ resources:
   requests:
     cpu: 25m
     memory: 1G
+
+sentry:
+  enabled: true
+  environment: staging
+  tracesSampleRate: 0.25
