--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -42,6 +42,18 @@ management:
     health:
       show-details: always
 
+sentry:
+  enabled: ${SENTRY_ENABLED:false}
+  dsn: ${SENTRY_DSN:}
+  environment: ${SENTRY_ENVIRONMENT:local}
+  traces-sample-rate: ${SENTRY_TRACES_SAMPLE_RATE:1}
+  send-default-pii: false
+  logging:
+    minimum-event-level: error
+    minimum-breadcrumb-level: info
+
+
+
 laa:
   provider-details-api:
     host: ${PROVIDER_DETAILS_API_HOSTNAME}
